--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,10 @@ a, a:hover {
   border-radius: 20px;
 }
 
+#slider-area {
+  border-bottom: 1px solid black;
+}
+
 .slider-content a {
   margin-right: 10%;
 }
@@ -73,12 +77,51 @@ a, a:hover {
 
 .slider-bg {
   margin-top: 65px;
-  height: 600px;
+  margin-bottom: 20px;
+  height: 500px;
   overflow: hidden;
 }
 
 .slider-bg img {
   width: 70%;
+}
+
+#about-top-area {
+  border-bottom: 1px solid black;
+}
+
+.about-top-hadding {
+  padding-top: 10%;
+}
+
+.about-top-hadding h5 {
+  font-size: 17px;
+  color: #A4AAB5;
+  margin-bottom: 10px;
+}
+
+.single-top-about {
+  margin-top: 50%;
+  margin-bottom: 50%;
+}
+
+.single-top-about i {
+  font-size: 3em;
+  color: #7063CF;
+  margin-bottom: 10px;
+}
+
+.single-top-about h3 {
+  color: #7063CF;
+  text-transform: uppercase;
+  font-size: 21px;
+  margin-bottom: 10px;
+}
+
+.single-top-about p {
+  margin: 0 7%;
+  color: #A4AAB5;
+  overflow: hidden;
 }
 
 /*# sourceMappingURL=style.css.map */
