--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -34,6 +34,9 @@ a,a:hover{
 @import "header.scss";
 @import  "slider.scss";
 @import "about.scss";
+@import  "features.scss";
+@import "screenshort.scss";
+@import "plan.scss";
  
 
 
