--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,4 +188,154 @@ a, a:hover {
   width: 85%;
 }
 
+/*=========================================================
+                  featurse css
+=========================================================*/
+#features-area {
+  border-bottom: 1px solid black;
+}
+
+#features-area p {
+  text-align: center;
+  font-size: 18px;
+  font-weight: 500;
+  color: #A4AAB5;
+}
+
+#features-area h3 {
+  text-align: center;
+}
+
+.features-bg {
+  height: 500px;
+  overflow: hidden;
+  margin: 5%;
+}
+
+.features-bg img {
+  width: 90%;
+  text-align: center;
+  margin: 20% 0;
+}
+
+.features-boxes {
+  margin-top: 15%;
+}
+
+.features-single-box {
+  width: 49%;
+  margin-bottom: 5%;
+  display: inline-block;
+}
+
+.features-single-box i {
+  font-size: 3em;
+  color: #7063CF;
+  margin-bottom: 5%;
+}
+
+.features-single-box h4 {
+  font-size: 22px;
+  color: #7063CF;
+  margin-bottom: 5%;
+}
+
+.features-single-box p {
+  font-size: 15px;
+}
+
+#sreenshort {
+  border-bottom: 1px solid black;
+}
+
+#sreenshort p {
+  color: #A4AAB5;
+  text-align: center;
+  margin-top: 2%;
+  margin-bottom: 1%;
+  font-weight: 400;
+}
+
+#sreenshort h3 {
+  text-align: center;
+}
+
+.sreenshort-wrapper {
+  display: flex;
+  margin: 5% 0;
+}
+
+.single-bg {
+  width: 20%;
+  display: inline-block;
+}
+
+/*============================================
+             plan
+=======================================================*/
+.plan-content {
+  margin: 42% 0;
+}
+
+.plan-content h3 {
+  width: 70%;
+}
+
+.plan-content p {
+  color: #A4AAB5;
+  margin: 5% 10% 8% 0;
+}
+
+.price-card {
+  display: flex;
+}
+
+.single-price-card {
+  display: inline-block;
+  margin: 19% 0;
+  box-shadow: 0px 5px 6px #00000061;
+}
+
+.single-price-card:nth-of-type(1) {
+  height: 416px;
+  width: 54%;
+}
+
+.single-price-card:nth-of-type(2) {
+  height: 400px;
+  width: 44%;
+}
+
+.card-head {
+  display: flex;
+  margin: 20% 0 0 12%;
+}
+
+.card-head i {
+  font-size: 4em;
+  color: #7063CF;
+}
+
+.card-head h3 {
+  font-size: 20px;
+}
+
+.card-head h4 {
+  margin-bottom: 10%;
+}
+
+.single-price-card p {
+  margin: 2% 0 1% 12%;
+  color: #A4AAB5;
+  font-size: 15px;
+}
+
+.single-price-card p:last-of-type {
+  padding-bottom: 10%;
+}
+
+.plan_btn {
+  margin: 0 0 0 10%;
+}
+
 /*# sourceMappingURL=style.css.map */
