--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,6 +273,10 @@ a, a:hover {
 /*============================================
              plan
 =======================================================*/
+#plan-area {
+  border-bottom: 1px solid black;
+}
+
 .plan-content {
   margin: 42% 0;
 }
@@ -336,6 +340,65 @@ a, a:hover {
 
 .plan_btn {
   margin: 0 0 0 10%;
+}
+
+/*===========================================
+                 user css
+===========================================*/
+#users-area {
+  text-align: center;
+}
+
+#users-area p:nth-of-type(1) {
+  font-weight: bold;
+  color: #A4AAB5;
+  padding-top: 5%;
+}
+
+#users-area h3 {
+  margin-bottom: 5%;
+}
+
+.uSer {
+  margin: 10% 0;
+}
+
+.user-bg img {
+  width: 100%;
+  border-radius: 50%;
+  border: 1px solid black;
+}
+
+.user-bg {
+  margin: 1% 0 5% 0;
+  height: 150px;
+  overflow: hidden;
+}
+
+.user-bottom-content h3 {
+  margin-top: 2%;
+  font-size: 16px;
+  color: #A4AAB5;
+}
+
+.user-bottom-content h6 {
+  color: #A4AAB5;
+}
+
+.user-bottom-content h6:nth-of-type(1) {
+  margin-top: 3%;
+}
+
+.user-bottom-content h6:nth-of-type(2) {
+  padding-bottom: 2%;
+}
+
+.user-bottom-content h4 {
+  font-size: 20px;
+}
+
+.user-bottom-content h5 {
+  font-size: 16px;
 }
 
 /*# sourceMappingURL=style.css.map */
