--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -401,4 +401,27 @@ a, a:hover {
   font-size: 16px;
 }
 
+#contract-area {
+  height: 200px;
+  background: #7063CF;
+  position: relative;
+}
+#contract-area input[type=search] {
+  width: 50%;
+  height: 70px;
+  border: none;
+  margin-top: 5.4%;
+  transform: translateX(50%);
+  border-radius: 50px;
+  padding-left: 50px;
+}
+#contract-area input::placeholder {
+  font-size: 20px;
+}
+#contract-area a {
+  position: absolute;
+  top: 85px;
+  left: 821px;
+}
+
 /*# sourceMappingURL=style.css.map */
