--- a/assets/sass/about.scss
+++ b/assets/sass/about.scss
@@ -1,18 +1,17 @@
 #about-top-area{
-	 border-bottom: 1px solid black;
+	 
 }
 .about-top-hadding{
  padding-top: 10%;
 }
- 
 .about-top-hadding h5{
 	font-size: 17px;
     color: $font_color;
     margin-bottom: 10px;
 }
 .single-top-about{
-	margin-top:50%;
-	  margin-bottom: 50%;
+	margin-top:44%;
+	  margin-bottom: 25%;
 }
 .single-top-about i{
 	font-size: 3em;
@@ -26,16 +25,39 @@
    margin-bottom:10px;
 }
 .single-top-about p{
-     margin: 0  7%;
-   
+     margin:0  7%;
      color: $font_color;
      overflow: hidden;
+     height: 100px;
+     overflow: hidden;
 }
+@media only screen and (min-width: 768px) and (max-width: 991px){
+ .about-top-hadding {
+    padding-top: 5%;
+}
+.single-top-about h3 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+}
+
+@media only screen and (max-width: 767px) {
+
+.single-top-about {
+    margin-top: -5%;
+}
+.about-top-hadding h3{
+	margin-bottom: 25%;
+}
+
+}
+
 /*=========================================================
                   about-middel css
 =========================================================*/             
 #about-middel-area{
-	border-bottom: 1px solid black;
+	 
 }
 .about-middel-bg{
 	margin: 15% 0;
@@ -44,7 +66,7 @@
 	width: 80%;
 }
 .about-middel-content{
-	transform: translateY(60%);
+	transform: translateY(67%);
 }
 .about-middel-content h3{
    color: $pray_color;
@@ -52,23 +74,58 @@
    width: 70%;
 }
 .about-middel-content p{
-	margin-bottom: 10%;
+	margin-bottom: 7.5%;
 	color: $font-color;
 	width: 85%;
 }
 .about-middel-btn{}
+@media only screen and (min-width: 768px) and (max-width: 991px){
+.about-middel-content {
+    transform: translateY(5%);
+}
+.about-middel-content h3 {
+    color: #7063CF;
+    margin: 11% 0 10px 0;
+    width: 100%;
+}
+
+}
+
+@media only screen and (max-width: 767px) {
+.about-middel-bg img {
+    width: 100%;
+    text-align: center;
+}
+.about-middel-bg {
+    margin: 6% 0;
+}
+.about-middel-content {
+    text-align: center;
+    transform: translateY(-9%);
+}
+.about-middel-content h3 {
+    margin: 10% 0 20px 0;
+    width: 100%;
+}
+.about-middel-content p{
+    margin-bottom: 7.5%;
+ 
+    width: 100%;
+}
+
+}
 /*=========================================================
                   about-bottom css
 =========================================================*/ 
 #about-bottom-area{
-	border-bottom: 1px solid black;
+ 
 }
 .about-bottom-area{}
 .about-bottom-content{
-	transform: translateY(70%);
+	transform: translateY(50%);
 }
 .about-bottom-bg{
-    margin:15% 0;
+    margin:6% 0;
 	height: 500px;
 	overflow: hidden;
 }
@@ -82,7 +139,42 @@
    width: 70%;
 }
 .about-bottom-content p{
-	margin-bottom: 10%;
+	margin-bottom: 8%;
 	color: $font-color;
 	width: 85%;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px){
+.about-bottom-content {
+    transform: translateY(7%);
+}
+.about-bottom-content h3 {
+    margin: 9% 0px 13px 0;
+    width: 100%;
+}
+.about-bottom-bg {
+    margin: 14% 0 0 0;
+    height: 367px;
+}
+
+}
+
+@media only screen and (max-width: 767px) {
+.about-bottom-content {
+    transform: translateY(9%);
+    text-align: center;
+}
+.about-bottom-content h3 {
+    margin: 10% 0 20px 0;
+    width: 100%;
+}
+.about-bottom-content p{
+   width: 100%;
+}
+.about-bottom-bg {
+    margin: 19% 0;
+    height: 282px;
+    overflow: hidden;
+}
+
+
 }
