--- a/assets/sass/plan.scss
+++ b/assets/sass/plan.scss
@@ -1,7 +1,9 @@
 /*============================================
              plan
 =======================================================*/             
- #plan-area{}
+ #plan-area{
+  
+ }
  .plan-content{
  	margin:42% 0;
  }
@@ -10,14 +12,14 @@
  }
  .plan-content p{
 		color :$font_color;
-		margin:5% 10% 8% 0; 
+		margin:5% 10% 7% 0; 
  }
  .price-card{
  	display:flex;
  }
  .single-price-card{
  	display: inline-block;
- 	margin:19% 0;
+ 	margin:15% 0;
  	box-shadow:0px 5px 6px #00000061;;
  }
  .single-price-card:nth-of-type(1){
@@ -37,7 +39,8 @@
   	color: $pray_color;
   }
  .card-head h3{
- 	font-size: 20px;
+ 	font-size: 17px;
+  color:$pray_color;
  }
  .card-head h4{
  	margin-bottom:10%;
@@ -53,5 +56,66 @@
  }
  .plan_btn{
    margin :0 0 0 10%;	
-
  }
+ @media only screen and (min-width: 768px) and (max-width: 991px){
+.plan-content{
+  text-align: center;
+}
+.plan-content h3 {
+    width: 100%;
+    font-size: 24px;
+}
+.single-price-card p {
+    margin: 2% 0 1% 7%;
+    
+}
+.single-price-card:nth-of-type(1) {
+    height: 378px;
+    width: 50%;
+}
+.single-price-card:nth-of-type(2) {
+    height: 350px;
+    width: 50%;
+}
+
+
+}
+@media only screen and (max-width: 767px) {
+.plan-content{
+  text-align: center;
+}
+.plan-content h3 {
+    width: 100%;
+} 
+.plan-content p {
+    color: #A4AAB5;
+    margin: 5% 0 7% 0;
+}
+.plan-content {
+    margin: 17% 0;
+}
+.card-head i {
+    font-size: 2em;
+    color: #7063CF;
+}
+.card-head h3 {
+    font-size: 16px;
+}
+.card-head span{
+    font-size: 15px;
+}
+.single-price-card p {
+  text-align: center;
+    margin: 2% 0 1% 0;
+    color: #A4AAB5;
+    font-size: 10px;
+}
+.single-price-card:nth-of-type(1) {
+    height: 288px;
+    width: 54%;
+}
+.single-price-card:nth-of-type(2) {
+    height: 280px;
+    width: 54%;
+}
+}
