--- a/assets/sass/slider.scss
+++ b/assets/sass/slider.scss
@@ -1,5 +1,5 @@
   #slider-area{
-   border-bottom: 1px solid black;
+ 
  }
  .slider-contenTs{
  	 
@@ -12,7 +12,7 @@
  }
 
  .slider-content h2{
- 	margin-top: 80px;
+ 	margin-top: 108px;
  	font-size: 50px;
  
  }
@@ -22,18 +22,58 @@
  	color: $font_color;
  	width: 95%;
  }
-.slider-m-btn{
-  
- }
- .slider-n-btn{
-  
- }
- .slider-bg{
-   margin-top:65px;
-   margin-bottom: 20px;
- 	height: 500px;
- 	overflow: hidden;
+
+.slider-bg{
+		margin-top:65px;
+		margin-bottom: 20px;
+		height: 500px;
+		overflow: hidden;
  }
  .slider-bg img{
    width: 70%;
  } 
+@media only screen and (min-width: 768px) and (max-width: 991px){
+.mxo_btnM{
+  	 padding:10px 5px;
+  }
+.slider-bg {
+    margin-top: 99px;
+     }
+ .slider-bg img {
+    width: 87%;
+}  
+.slider-content h2 {
+    margin-top: 85px;
+    font-size: 45px;
+}
+.slider-content p {
+    margin-top: 20px;
+}
+.slider-content a {
+    margin-right: -4%;
+} 
+
+}
+
+@media only screen and (max-width: 767px) {
+#slider-area{
+  text-align: center;
+}
+.slider-content h2 {
+    margin-top: 29px;
+    font-size: 38px;
+}
+.slider-bg {
+    height: 360px;
+}
+.slider-bg img {
+    width: 84%;
+}
+
+}
+   
+
+
+ 
+ 
+ 
