--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -4,8 +4,7 @@ $font_color :#A4AAB5;
 
 /*===========================================
                     reset-code
- ======================================*/     
-
+======================================*/     
 *{
 	margin: 0;
 	padding: 0;
@@ -18,15 +17,23 @@ a,a:hover{
 	text-decoration: none;
 }
 #mxo_btn{
- padding:12px 28px;
- background: $pray_color;
- color: $white_color;
- font-size: 14px;
- font-weight: 500;	
- border-radius: 50px;
+	padding      :12px 28px;
+	background   : $pray_color;
+	color        : $white_color;
+	font-size    : 14px;
+	font-weight  : 500;	
+	border-radius: 50px;
+	transition-property: .5s;
 }
 #mxo_btn:hover{
 	color: $font_color;
+	box-shadow: 1px 1px 15px #7063CF;
+}
+@media only screen and (max-width: 767px) {
+ 	#mxo_btn{
+ 		padding:12px 25px;
+ 		font-size: 10px;
+ 	}
 }
 
 
@@ -37,7 +44,7 @@ a,a:hover{
 @import  "features.scss";
 @import "screenshort.scss";
 @import "plan.scss";
- 
-
+@import  "user.scss"; 
+@import  "contract.scss";
 
 
